Fixed what I've broken in GraderManagement and prettyfied project overview

--- a/src/main/java/com/group13/tcsprojectgrading/frontend/src/components/project/project.module.css
+++ b/src/main/java/com/group13/tcsprojectgrading/frontend/src/components/project/project.module.css
@@ -15,3 +15,11 @@
     text-decoration: none;
     color: white;
 }
+
+.sectionContainer {
+    margin-bottom: 1rem;
+}
+
+.sectionContainer button {
+    margin-right: 0.5rem;
+}
